Переделал диалоги: кнопки активны/неактивны в зависимости от выбора Закрепление в статус бар на pre-lollipop Мелкие изменения

--- a/app/src/main/res/drawable/ic_color_02_d.xml
+++ b/app/src/main/res/drawable/ic_color_02_d.xml
@@ -4,7 +4,7 @@
     <solid android:color="@color/noteIndigoDark" />
     <stroke
         android:width="@dimen/layout_1dp"
-        android:color="@color/noteIndigo" />
+        android:color="@color/noteIndigoLight" />
     <size
         android:width="24dp"
         android:height="24dp" />
