--- a/app/src/main/res/drawable/ic_color_00_d.xml
+++ b/app/src/main/res/drawable/ic_color_00_d.xml
@@ -4,7 +4,7 @@
     <solid android:color="@color/noteRedDark" />
     <stroke
         android:width="@dimen/layout_1dp"
-        android:color="@color/noteRed" />
+        android:color="@color/noteRedLight" />
     <size
         android:width="24dp"
         android:height="24dp" />
