--- a/app/src/main/res/drawable/ic_color_01_d.xml
+++ b/app/src/main/res/drawable/ic_color_01_d.xml
@@ -4,7 +4,7 @@
     <solid android:color="@color/notePurpleDark" />
     <stroke
         android:width="@dimen/layout_1dp"
-        android:color="@color/notePurple" />
+        android:color="@color/notePurpleLight" />
     <size
         android:width="24dp"
         android:height="24dp" />
