--- a/app/src/main/res/drawable/ic_color_03_d.xml
+++ b/app/src/main/res/drawable/ic_color_03_d.xml
@@ -4,7 +4,7 @@
     <solid android:color="@color/noteBlueDark" />
     <stroke
         android:width="@dimen/layout_1dp"
-        android:color="@color/noteBlue" />
+        android:color="@color/noteBlueLight" />
     <size
         android:width="24dp"
         android:height="24dp" />
