--- a/app/src/main/res/drawable/ic_color_04_d.xml
+++ b/app/src/main/res/drawable/ic_color_04_d.xml
@@ -4,7 +4,7 @@
     <solid android:color="@color/noteTealDark" />
     <stroke
         android:width="@dimen/layout_1dp"
-        android:color="@color/noteTeal" />
+        android:color="@color/noteTealLight" />
     <size
         android:width="24dp"
         android:height="24dp" />
