--- a/app/src/main/res/drawable/ic_color_05_d.xml
+++ b/app/src/main/res/drawable/ic_color_05_d.xml
@@ -4,7 +4,7 @@
     <solid android:color="@color/noteGreenDark" />
     <stroke
         android:width="@dimen/layout_1dp"
-        android:color="@color/noteGreen" />
+        android:color="@color/noteGreenLight" />
     <size
         android:width="24dp"
         android:height="24dp" />
