--- a/app/src/main/res/drawable/ic_color_07_d.xml
+++ b/app/src/main/res/drawable/ic_color_07_d.xml
@@ -4,7 +4,7 @@
     <solid android:color="@color/noteOrangeDark" />
     <stroke
         android:width="@dimen/layout_1dp"
-        android:color="@color/noteOrange" />
+        android:color="@color/noteOrangeLight" />
     <size
         android:width="24dp"
         android:height="24dp" />
