--- a/app/src/main/res/drawable/ic_color_07_l.xml
+++ b/app/src/main/res/drawable/ic_color_07_l.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@color/noteOrange" />
+    <solid android:color="@color/noteOrangeLight" />
     <stroke
         android:width="@dimen/layout_1dp"
         android:color="@color/noteOrangeDark" />
