--- a/app/src/main/res/drawable/ic_color_08_d.xml
+++ b/app/src/main/res/drawable/ic_color_08_d.xml
@@ -4,7 +4,7 @@
     <solid android:color="@color/noteBrownDark" />
     <stroke
         android:width="@dimen/layout_1dp"
-        android:color="@color/noteBrown" />
+        android:color="@color/noteBrownLight" />
     <size
         android:width="24dp"
         android:height="24dp" />
