--- a/app/src/main/res/drawable/ic_color_09_d.xml
+++ b/app/src/main/res/drawable/ic_color_09_d.xml
@@ -4,7 +4,7 @@
     <solid android:color="@color/noteBlueGreyDark" />
     <stroke
         android:width="@dimen/layout_1dp"
-        android:color="@color/noteBlueGrey" />
+        android:color="@color/noteBlueGreyLight" />
     <size
         android:width="24dp"
         android:height="24dp" />
