Отказ от идеи с плавающей кнопкой (Из-за невозможности нормально реализовать в текстовой заметке) Добавления строк с описанием пустых страниц и информации на экраны Немного рефакторинга

--- a/app/src/main/res/layout/frg_bin.xml
+++ b/app/src/main/res/layout/frg_bin.xml
@@ -33,12 +33,16 @@
 
                 <ImageView
                     style="@style/Info.Image"
-                    app:srcCompat="@drawable/ic_bin"
-                    android:contentDescription="@null" />
+                    android:contentDescription="@null"
+                    app:srcCompat="@drawable/ic_bin" />
 
                 <TextView
-                    style="@style/Info.Text"
-                    android:text="@string/info_bin_empty" />
+                    style="@style/Info.Title"
+                    android:text="@string/info_bin_title" />
+
+                <TextView
+                    style="@style/Info.Details"
+                    android:text="@string/info_bin_details" />
 
             </LinearLayout>
 
