--- a/app/src/main/res/layout/frg_roll.xml
+++ b/app/src/main/res/layout/frg_roll.xml
@@ -25,13 +25,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="?attr/clBackground"
         android:orientation="vertical">
 
-        <androidx.coordinatorlayout.widget.CoordinatorLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:background="?attr/clBackground">
+            android:orientation="vertical">
 
             <include
                 layout="@layout/inc_toolbar_note"
@@ -43,15 +44,12 @@
                 android:id="@+id/frgRoll_rv"
                 style="@style/RecyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+                android:layout_height="match_parent" />
 
-            <include layout="@layout/inc_note_fab" />
-
-        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+        </LinearLayout>
 
         <include
-            layout="@layout/inc_note_enter"
+            layout="@layout/inc_toolbar_enter"
             app:keyEdit='@{keyEdit}' />
 
     </LinearLayout>
