--- a/app/src/main/res/values-ru/str_app.xml
+++ b/app/src/main/res/values-ru/str_app.xml
@@ -8,10 +8,13 @@
     <string name="title_frg_bin">Корзина</string>
     <string name="title_act_settings">Настройки</string>
 
-    <string name="info_rank_empty">Нет категорий</string>
-    <string name="info_notes_empty">Нет созданных заметок</string>
-    <string name="info_bin_empty">Нет удалённых заметок</string>
+    <string name="info_rank_title">Нет категорий</string>
+    <string name="info_notes_title">Нет созданных заметок</string>
+    <string name="info_bin_title">Нет удалённых заметок</string>
 
+    <string name="info_rank_details">Чтобы добавить категорию введите имя в поле сверху.</string>
+    <string name="info_notes_details">Чтобы добавить заметку нажмите ещё раз на центральную кнопку меню.</string>
+    <string name="info_bin_details">После удаления заметки попадают сюда. Скрытые заметки не удалятся отсюда.</string>
 
     <!-- Name of menu items -->
     <string name="menu_page_notes_settings">Настройки</string>
