--- a/app/src/main/res/values/sty_info.xml
+++ b/app/src/main/res/values/sty_info.xml
@@ -17,13 +17,19 @@
         <item name="android:tint">?attr/clSecond</item>
     </style>
 
-    <style name="Info.Text">
+    <style name="Info.Title">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center</item>
         <item name="android:padding">@dimen/layout_4dp</item>
-        <item name="android:textColor">?attr/clSecond</item>
+        <item name="android:textColor">?attr/clText</item>
         <item name="android:textSize">@dimen/text_18sp</item>
+    </style>
+
+    <style name="Info.Details" parent="Info.Title">
+        <item name="android:textColor">?attr/clSecond</item>
+        <item name="android:textSize">@dimen/text_14sp</item>
+        <item name="android:padding">@dimen/layout_8dp</item>
     </style>
 
 </resources>
