--- a/app/src/main/res/values/sty_app.xml
+++ b/app/src/main/res/values/sty_app.xml
@@ -23,13 +23,22 @@
         <item name="colorPrimaryDark">?attr/clSecond</item>
         <item name="colorAccent">?attr/clAccent</item>
 
-        <item name="android:windowLightStatusBar" tools:targetApi="23">true</item>
-
         <item name="styleToolbar">@style/Toolbar.Light</item>
         <item name="themePopup">@style/PopupTheme.Light</item>
 
         <item name="alertDialogStyle">@style/Alert.Light</item>
         <item name="alertDialogTheme">@style/Alert.Light</item>
+    </style>
+
+    <style name="App.Light.UI">
+        <item name="colorPrimaryDark" tools:targetApi="lollipop">?attr/clPrimary</item>
+        <item name="android:windowBackground">?attr/clBackground</item>
+
+        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
+
+        <item name="android:navigationBarColor" tools:targetApi="lollipop">?attr/colorPrimary</item>
+        <item name="android:navigationBarDividerColor" tools:targetApi="o_mr1">?attr/clDivider</item>
     </style>
 
     <style name="App.Dark" parent="Theme.AppCompat.NoActionBar">
@@ -52,8 +61,6 @@
         <item name="colorPrimaryDark">?attr/clPrimary</item>
         <item name="colorAccent">?attr/clAccent</item>
 
-        <item name="android:windowLightStatusBar" tools:targetApi="23">false</item>
-
         <item name="styleToolbar">@style/Toolbar.Dark</item>
         <item name="themePopup">@style/PopupTheme.Dark</item>
 
@@ -61,9 +68,26 @@
         <item name="alertDialogTheme">@style/Alert.Dark</item>
     </style>
 
+    <style name="App.Dark.UI">
+        <item name="android:windowBackground">?attr/clBackground</item>
+
+        <item name="android:windowLightStatusBar" tools:targetApi="m">false</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">false</item>
+
+        <item name="android:navigationBarColor" tools:targetApi="lollipop">?attr/colorPrimary</item>
+        <item name="android:navigationBarDividerColor" tools:targetApi="o_mr1">?attr/clDivider</item>
+    </style>
+
     <style name="App.Splash" parent="Theme.AppCompat.NoActionBar">
         <item name="colorPrimaryDark">@color/ic_launcher_background</item>
+
         <item name="android:windowBackground">@drawable/bg_splash</item>
+
+        <item name="android:windowLightStatusBar" tools:targetApi="m">false</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">false</item>
+
+        <item name="android:navigationBarColor" tools:targetApi="lollipop">?attr/colorPrimaryDark</item>
+        <item name="android:navigationBarDividerColor" tools:targetApi="o_mr1">?attr/colorPrimaryDark</item>
     </style>
 
     <style name="Alert.Light" parent="Theme.AppCompat.Light.Dialog.Alert">
