--- a/app/src/main/res/values/sty_toolbar_note.xml
+++ b/app/src/main/res/values/sty_toolbar_note.xml
@@ -15,6 +15,7 @@
     </style>
 
     <style name="ToolbarNote.Scroll">
+        <item name="android:layout_gravity">center</item>
         <item name="android:overScrollMode">never</item>
         <item name="android:scrollbars">none</item>
     </style>
