--- a/app/src/main/res/layout/frg_roll.xml
+++ b/app/src/main/res/layout/frg_roll.xml
@@ -25,7 +25,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?attr/clBackground"
         android:orientation="vertical">
 
         <LinearLayout
@@ -49,7 +48,7 @@
         </LinearLayout>
 
         <include
-            layout="@layout/inc_toolbar_enter"
+            layout="@layout/inc_roll_enter"
             app:keyEdit='@{keyEdit}' />
 
     </LinearLayout>
