--- a/app/src/main/res/layout/item_color.xml
+++ b/app/src/main/res/layout/item_color.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -32,7 +33,7 @@
             android:layout_height="@dimen/icon_24dp"
             android:layout_gravity="center"
             android:contentDescription="@null"
-            android:src='@{Draw.getIconCheck(context, position)}' />
+            app:srcCompat="@drawable/ic_color_check" />
 
         <ImageView
             android:id="@+id/itemColor_iv_click"
