--- a/app/src/main/res/layout/inc_roll_enter.xml
+++ b/app/src/main/res/layout/inc_roll_enter.xml
@@ -27,10 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:paddingLeft="@dimen/layout_4dp"
-            android:paddingTop="@dimen/layout_8dp"
-            android:paddingRight="@dimen/layout_4dp"
-            android:paddingBottom="@dimen/layout_8dp">
+            android:padding="@dimen/layout_4dp">
 
             <EditText
                 android:id="@+id/incRollEnter_et_enter"
