--- a/app/src/main/res/values/val_settings.xml
+++ b/app/src/main/res/values/val_settings.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <!-- Settings values -->
+    <integer name="pref_default_first_start">0</integer>
     <integer name="pref_default_color">10</integer>
     <bool name="pref_default_pause_save">false</bool>
     <bool name="pref_default_auto_save">false</bool>
