--- a/app/src/main/res/layout/frg_bin.xml
+++ b/app/src/main/res/layout/frg_bin.xml
@@ -28,7 +28,7 @@
             android:layout_height="match_parent">
 
             <include
-                layout="@layout/inc_page_info"
+                layout="@layout/inc_info"
                 android:visibility='@{listEmpty ? v.VISIBLE : v.GONE}'
                 app:details='@{R.string.info_bin_details}'
                 app:icon='@{R.drawable.ic_bin}'
