Последние приготовления перед релизом

--- a/app/src/main/res/layout/inc_info.xml
+++ b/app/src/main/res/layout/inc_info.xml
@@ -25,6 +25,7 @@
 
         <ImageView
             style="@style/Info.Icon"
+            android:tint="?attr/clIcon"
             android:contentDescription="@null"
             android:src='@{Draw.get(context, icon, R.attr.clIcon)}' />
 
