--- a/app/src/main/res/values/str_app.xml
+++ b/app/src/main/res/values/str_app.xml
@@ -54,9 +54,9 @@
 
 
     <!-- Name of channels & groups-->
-    <string name="notification_channel_id" translatable="false">HandyNotesChannel</string>
+    <string name="notification_channel_id" translatable="false">handy_notes_channel_id</string>
 
-    <string name="notification_channel">Handy Notes</string>
+    <string name="notification_channel">Notes</string>
     <string name="notification_group">Notes</string>
 
 
@@ -129,9 +129,28 @@
     <!-- About dialog -->
     <string name="about_app_for">for Android</string>
     <string name="about_app_developer">Developer:\nKuznetsov Alexey</string>
-    <string name="about_app_logo_designer">Logo designer:\nPoplekina Arina</string>
+    <string name="about_app_logo_designer">Designer:\nPoplekina Arina</string>
     <string name="about_app_used_libraries">Used libraries:</string>
-    <string name="about_app_libraries" translatable="false">com.android.support:\n\tappcompat-v7:26.0.0-alpha1\n\tcardview-v7:26.0.0-alpha1\n\tdesign:26.0.0-alpha1\n\tsupport-v4:26.0.0-alpha1\n\tsupport-vector-drawable:26.0.0-alpha1\n\tanimated-vector-drawable:26.0.0-alpha1</string>
+    <string name="about_app_libraries" translatable="false">
+        androidx.lifecycle:\n\t
+            lifecycle-extensions:2.0.0-beta01\n\t
+            lifecycle-compiler:2.0.0-beta01\n
+
+        androidx.room:\n\t
+            room-runtime:2.0.0-beta01\n\t
+            room-testing:2.0.0-beta01\n\t
+            room-compiler:2.0.0-beta01\n
+
+        androidx.appcompat:appcompat:1.0.0-beta01\n
+        androidx.legacy:legacy-support-v4:1.0.0-beta01\n
+        androidx.cardview:cardview:1.0.0-beta01\n
+
+        androidx.vectordrawable:\n\t
+            vectordrawable:1.0.0-beta01\n\t
+            vectordrawable-animated:1.0.0-beta01\n
+
+        com.google.android.material:material:1.0.0-beta01
+    </string>
     <string name="about_app_version">App version: 1.0</string>
 
 
