--- a/app/src/main/res/layout/inc_roll_enter.xml
+++ b/app/src/main/res/layout/inc_roll_enter.xml
@@ -16,7 +16,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="wrap_content"
         android:background="?attr/clPrimary"
         android:orientation="vertical"
         android:visibility='@{keyEdit ? v.VISIBLE : v.GONE}'>
