--- a/app/src/main/res/layout/view_about.xml
+++ b/app/src/main/res/layout/view_about.xml
@@ -1,113 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:padding="@dimen/layout_16dp">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:baselineAligned="false"
         android:gravity="center"
-        android:orientation="horizontal"
-        android:paddingBottom="@dimen/layout_8dp">
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.5">
-
-            <ImageView
-                android:id="@+id/viewAbout_iv_logo"
-                style="@style/ViewAbout.Logo"
-                android:contentDescription="@null"
-                app:srcCompat="@mipmap/ic_app" />
-
-        </FrameLayout>
+        android:orientation="vertical"
+        android:padding="@dimen/layout_16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="0.5"
-            android:orientation="vertical">
+            android:baselineAligned="false"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:paddingBottom="@dimen/layout_8dp">
 
-            <TextView
-                style="@style/ViewAbout.Title"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/app_name" />
+                android:layout_height="match_parent"
+                android:layout_weight="0.5">
 
-            <TextView
-                style="@style/ViewAbout.Subtitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/about_app_for"
-                android:paddingBottom="@dimen/layout_4dp"/>
+                <ImageView
+                    android:id="@+id/viewAbout_iv_logo"
+                    style="@style/ViewAbout.Logo"
+                    android:contentDescription="@null"
+                    app:srcCompat="@mipmap/ic_app" />
+
+            </FrameLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="@dimen/layout_4dp"
-                android:orientation="vertical"
-                android:weightSum="1">
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="0.5"
+                android:orientation="vertical">
 
                 <TextView
+                    style="@style/ViewAbout.Title"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginBottom="@dimen/layout_4dp"
-                    android:layout_weight="0.5"
-                    android:gravity="center"
-                    android:text="@string/about_app_developer"
-                    android:textColor="?attr/clText"
-                    android:textSize="@dimen/text_16sp" />
+                    android:layout_height="wrap_content"
+                    android:text="@string/app_name" />
 
                 <TextView
+                    style="@style/ViewAbout.Subtitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="@dimen/layout_4dp"
+                    android:text="@string/about_app_for" />
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="0.5"
-                    android:gravity="center"
-                    android:text="@string/about_app_logo_designer"
-                    android:textColor="?attr/clText"
-                    android:textSize="@dimen/text_16sp" />
+                    android:layout_margin="@dimen/layout_4dp"
+                    android:orientation="vertical"
+                    android:weightSum="1">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="@dimen/layout_4dp"
+                        android:layout_weight="0.5"
+                        android:gravity="center"
+                        android:text="@string/about_app_developer"
+                        android:textColor="?attr/clText"
+                        android:textSize="@dimen/text_16sp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.5"
+                        android:gravity="center"
+                        android:text="@string/about_app_logo_designer"
+                        android:textColor="?attr/clText"
+                        android:textSize="@dimen/text_16sp" />
+                </LinearLayout>
             </LinearLayout>
+
         </LinearLayout>
 
-    </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/layout_8dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/layout_8dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:text="@string/about_app_used_libraries"
+                android:textColor="?attr/clText"
+                android:textSize="@dimen/text_16sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:text="@string/about_app_libraries"
+                android:textColor="?attr/clSecond"
+                android:textSize="@dimen/text_14sp" />
+
+        </LinearLayout>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="start"
-            android:text="@string/about_app_used_libraries"
+            android:gravity="center"
+            android:text="@string/about_app_version"
             android:textColor="?attr/clText"
-            android:textSize="@dimen/text_16sp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="start"
-            android:text="@string/about_app_libraries"
-            android:textColor="?attr/clSecond"
             android:textSize="@dimen/text_14sp" />
 
     </LinearLayout>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/about_app_version"
-        android:textColor="?attr/clText"
-        android:textSize="@dimen/text_14sp" />
-
-</LinearLayout>
+</ScrollView>
